Closed Bug 1846127 Opened 2 years ago Closed 1 year ago

Local Folders - Apply columns to - folder and its children - mail account - mail account fails

Categories

(Thunderbird :: Folder and Message Lists, defect)

Thunderbird 116
defect

Tracking

(thunderbird_esr115+ fixed, thunderbird121 fixed)

VERIFIED FIXED
122 Branch
Tracking Status
thunderbird_esr115 + fixed
thunderbird121 --- fixed

People

(Reporter: anjeyelf, Assigned: darktrojan)

References

(Blocks 1 open bug, )

Details

(Keywords: regression)

Attachments

(1 file)

Windows 10 OS
beta 116.0b7

  • 'Local Folders' mail account
  • Select 'Inbox'
  • set desired column headers
  • 'Apply columns to' > 'folder and it's children' > 'Local Folders' > 'Local Folders'
  • get pop up asking if I want to apply to all Local Folder folders - click on OK.

Expected Results
All other folders in the 'Local Folders' mail account to have same set of column headers as the 'Inbox'.

Actual Results
Nothing changed. It did not apply same column headers as set in Inbox.

Also reported in Support Forum by a user who downloaded version 115.0.1.
https://support.mozilla.org/en-US/questions/1419628
I tested the issue in beta 116.0b7 and can replicate same problem.

Can you try "Apply current view to..."?

Flags: needinfo?(anjeyelf)

(In reply to Alessandro Castellani [:aleca] from comment #1)

Can you try "Apply current view to..."?

beta 116.0b7

  • 'Local Folders' mail account
  • Select 'Inbox'
  • Set View > Sort by > Date, Descending, Threaded
  • All Other folders using View > Sort by > Date, Ascending, UnThreaded
  • Make sure to select 'Inbox'
  • 'Apply current view to' > 'folder and it's children' > 'Local Folders' > 'Local Folders'
  • get pop up asking 'Apply the current fodler's view to Local Folders and it's children' - click on OK.

Expected Result
All folders now using View > Sort by > Date, Descending, Threaded

Actual Result
Check all the other folders: No change, they are all still using View > Sort by > Date, Ascending, UnThreaded
Inbox remains as set using View > Sort by > Date, Descending, Threaded

Flags: needinfo?(anjeyelf)
See Also: → 1775177
Duplicate of this bug: 1853097

Do we konw why this works for some people but not others?

Severity: -- → S3

118.0b4
Still fails:
'Apply columns to' > 'folder and it's children' > 'Local Folders' > 'Local Folders'

Although it does work if you select on a per folder basis. But this is not so helpful if you have alot of top level folders.
'Apply columns to' > 'Folder and its children' > 'Local Folders' > 'Local Folders - Folder name'

Another case in Support Forum.
https://support.mozilla.org/en-US/questions/1419841

Assignee: nobody → geoff
Status: NEW → ASSIGNED

The root folder has no message database, so it would throw an exception and the rest of the operation would fail.

Setting the column states worked in 102 because that used folder.setStringProperty which avoided the error.
Now we write directly to the database, which also doesn't write to the folder cache. We never used the value from the cache anyway.

Target Milestone: --- → 122 Branch

Pushed by ikey@thunderbird.net:
https://hg.mozilla.org/comm-central/rev/a414e0a65bbe
Fix applying columns or view to a root folder and its descendants. r=mkmelin

Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Duplicate of this bug: 1865992

Good for uplift to beta?

Flags: needinfo?(geoff)

Comment on attachment 9364391 [details]
Bug 1846127 - Fix applying columns or view to a root folder and its descendants. r=#thunderbird-reviewers

[Approval Request Comment]
Regression caused by (bug #):
User impact if declined:
Testing completed (on c-c, etc.): about a week on Daily
Risk to taking this patch (and alternatives if risky):

Flags: needinfo?(geoff)
Attachment #9364391 - Flags: approval-comm-beta?

v.fixed on nightly

Status: RESOLVED → VERIFIED

Comment on attachment 9364391 [details]
Bug 1846127 - Fix applying columns or view to a root folder and its descendants. r=#thunderbird-reviewers

[Triage Comment]
Approved for beta

Attachment #9364391 - Flags: approval-comm-beta? → approval-comm-beta+

Good for 115?

Flags: needinfo?(geoff)

Comment on attachment 9364391 [details]
Bug 1846127 - Fix applying columns or view to a root folder and its descendants. r=#thunderbird-reviewers

Go on then.

Flags: needinfo?(geoff)
Attachment #9364391 - Flags: approval-comm-esr115?

Comment on attachment 9364391 [details]
Bug 1846127 - Fix applying columns or view to a root folder and its descendants. r=#thunderbird-reviewers

[Triage Comment]
Approved for esr115

Attachment #9364391 - Flags: approval-comm-esr115? → approval-comm-esr115+
Blocks: 1869684
Duplicate of this bug: 1775177
See Also: → 1872595
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: